--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -66,7 +66,6 @@ set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
-set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
@@ -177,7 +176,6 @@ set_real_ip_from 171.25.193.80;
 set_real_ip_from 172.104.182.84;
 set_real_ip_from 172.104.186.73;
 set_real_ip_from 172.104.243.155;
-set_real_ip_from 172.104.244.62;
 set_real_ip_from 172.105.174.195;
 set_real_ip_from 172.105.20.12;
 set_real_ip_from 172.232.209.254;
@@ -654,6 +652,7 @@ set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
 set_real_ip_from 2001:1b60:3:221:701:102:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:103:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:106:0:1;
+set_real_ip_from 2001:1c02:1a18:5700:7b6:bf5f:7e8:70d9;
 set_real_ip_from 200.122.181.2;
 set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:2:9161::1;
@@ -898,6 +897,7 @@ set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.199.199.250;
+set_real_ip_from 217.62.118.174;
 set_real_ip_from 23.129.64.130;
 set_real_ip_from 23.129.64.131;
 set_real_ip_from 23.129.64.132;
@@ -978,7 +978,6 @@ set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
-set_real_ip_from 2.58.56.193;
 set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
@@ -1032,7 +1031,6 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
-set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1238,7 +1236,6 @@ set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
-set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1530,6 +1527,7 @@ set_real_ip_from 2a0d:bbc7:0:1::50;
 set_real_ip_from 2a0d:bbc7:0:1::7f;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:1d80:13:51e8::1;
+set_real_ip_from 2a0e:1d80:17:6f8d::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:101;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1554,6 +1552,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
+set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -1567,8 +1566,6 @@ set_real_ip_from 2a0e:d604:1:151::2;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:5bdd::beef;
-set_real_ip_from 2a0f:ca80::1260:4bff:fea4:19b0;
-set_real_ip_from 2a0f:ca80::2e59:e5ff:fe49:3738;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
@@ -1707,7 +1704,6 @@ set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
-set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.180.12;
 set_real_ip_from 45.137.70.158;
 set_real_ip_from 45.138.16.107;
@@ -1893,7 +1889,6 @@ set_real_ip_from 77.48.28.237;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 77.91.75.25;
-set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.133.57.64;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
@@ -1903,6 +1898,7 @@ set_real_ip_from 80.94.92.106;
 set_real_ip_from 80.94.92.92;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
+set_real_ip_from 81.181.104.22;
 set_real_ip_from 8.211.1.212;
 set_real_ip_from 82.153.138.125;
 set_real_ip_from 82.153.138.241;
@@ -1963,6 +1959,7 @@ set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
 set_real_ip_from 91.219.237.39;
+set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.84.133;
@@ -1970,6 +1967,7 @@ set_real_ip_from 93.113.25.239;
 set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
+set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
@@ -1988,6 +1986,7 @@ set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
+set_real_ip_from 94.32.179.134;
 set_real_ip_from 94.72.103.33;
 set_real_ip_from 94.72.104.135;
 set_real_ip_from 94.74.164.89;
