--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -66,6 +66,7 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
+allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -192,7 +193,6 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.148.133;
 allow 176.65.148.3;
-allow 176.65.149.100;
 allow 176.65.149.105;
 allow 176.65.149.84;
 allow 176.65.149.87;
@@ -204,7 +204,6 @@ allow 177.93.140.66;
 allow 178.162.175.5;
 allow 178.17.170.144;
 allow 178.17.170.23;
-allow 178.17.170.43;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
@@ -236,7 +235,6 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -885,7 +883,6 @@ allow 209.141.55.26;
 allow 209.141.58.254;
 allow 209.141.61.52;
 allow 212.21.66.6;
-allow 212.34.142.89;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
@@ -930,6 +927,7 @@ allow 23.137.253.27;
 allow 23.137.254.137;
 allow 23.151.8.8;
 allow 23.155.8.104;
+allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -1001,6 +999,7 @@ allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -1031,6 +1030,7 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
+allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1222,7 +1222,6 @@ allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:68::1;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
-allow 2a00:1dc0:caff:c3::b65d;
 allow 2a00:4d80::1;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
@@ -1290,6 +1289,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1304,7 +1304,6 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
-allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
@@ -1316,7 +1315,6 @@ allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1711,7 +1709,6 @@ allow 45.138.16.113;
 allow 45.138.16.161;
 allow 45.138.16.164;
 allow 45.138.16.178;
-allow 45.138.16.205;
 allow 45.138.16.222;
 allow 45.138.16.230;
 allow 45.138.16.231;
@@ -1832,6 +1829,7 @@ allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.109;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1915,7 +1913,6 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
-allow 84.38.130.50;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.54.28.49;
